[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/herbivore.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/Bodo Amat.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/world.gd" type="Script" id=4]
[ext_resource path="res://Scenes/carnivore.tscn" type="PackedScene" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="animalGroup" type="Node" parent="."]

[node name="herb47" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5094, -1659 )

[node name="herb48" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5653, -1901 )

[node name="herb49" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5803, -1775 )

[node name="herb50" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5861, -1574 )

[node name="herb51" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5989, -1303 )

[node name="herb52" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5278, -1148 )

[node name="herb53" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5000, -960 )

[node name="herb54" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4670, -1180 )

[node name="herb55" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4120, -1274 )

[node name="herb56" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4058, -1564 )

[node name="herb57" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4063, -2002 )

[node name="herb58" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4601, -2316 )

[node name="herb59" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5039, -2259 )

[node name="herb60" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4559, -2146 )

[node name="herb61" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4886, -2029 )

[node name="herb62" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4391, -1857 )

[node name="herb63" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4516, -1451 )

[node name="herb64" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5393, -1909 )

[node name="herb65" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5430, -1502 )

[node name="herb66" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5165, -1457 )

[node name="herb67" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 4771, -1492 )

[node name="herb68" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5495, -1315 )

[node name="herb69" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( 5119, -1909 )

[node name="herb93" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3641, 2612 )

[node name="herb94" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3082, 2370 )

[node name="herb95" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -2932, 2496 )

[node name="herb96" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -2874, 2697 )

[node name="herb97" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -2746, 2968 )

[node name="herb98" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3457, 3123 )

[node name="herb99" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3735, 3311 )

[node name="herb100" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4065, 3091 )

[node name="herb101" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4615, 2997 )

[node name="herb102" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4677, 2707 )

[node name="herb103" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4672, 2269 )

[node name="herb104" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4134, 1955 )

[node name="herb105" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3696, 2012 )

[node name="herb106" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4176, 2125 )

[node name="herb107" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3849, 2242 )

[node name="herb108" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4344, 2414 )

[node name="herb109" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -4219, 2820 )

[node name="herb110" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3342, 2362 )

[node name="herb111" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3305, 2769 )

[node name="herb112" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3570, 2814 )

[node name="herb113" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3964, 2779 )

[node name="herb114" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3240, 2956 )

[node name="herb115" parent="animalGroup" instance=ExtResource( 2 )]
position = Vector2( -3616, 2362 )

[node name="carnivore" parent="animalGroup" instance=ExtResource( 6 )]
position = Vector2( 4734, -1709 )

[node name="carnivore2" parent="animalGroup" instance=ExtResource( 6 )]
position = Vector2( -4106, 2313 )

[node name="carnivore3" parent="animalGroup" instance=ExtResource( 6 )]
position = Vector2( -3632, 2988 )

[node name="foodGroup" type="Node" parent="."]

[node name="left" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -5305, 354 )
scale = Vector2( 0.5, 11 )
collision_layer = 1

[node name="up" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 79, -2882 )
scale = Vector2( 100, 0.1 )
collision_layer = 1

[node name="right" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 6514, 384 )
scale = Vector2( 0.5, 11 )
collision_layer = 1

[node name="down" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 212, 3940 )
scale = Vector2( 100, 0.1 )
collision_layer = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 905.0
color = Color( 0.788235, 0.788235, 0.788235, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 10

[node name="TimeElapsedLabel" type="Label" parent="CanvasLayer2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1541.0
margin_top = 25.0
margin_right = 1839.0
margin_bottom = 82.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Time Elapsed: 0
 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalHerb" type="Label" parent="CanvasLayer2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1541.0
margin_top = 57.0
margin_right = 1839.0
margin_bottom = 84.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "# of Herbs: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalCarn" type="Label" parent="CanvasLayer2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1541.0
margin_top = 89.0
margin_right = 1839.0
margin_bottom = 116.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "# of Carns: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalFood" type="Label" parent="CanvasLayer2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1541.0
margin_top = 119.0
margin_right = 1839.0
margin_bottom = 146.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "# of Food: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer2"]
margin_left = 3241.0
margin_top = 597.0
margin_right = 3299.0
margin_bottom = 621.0
rect_scale = Vector2( 2.67667, 2.12402 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="CanvasLayer2"]
margin_left = 1579.0
margin_top = 168.0
margin_right = 1727.0
margin_bottom = 208.0
text = "asfa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCamera" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="text_entered" from="CanvasLayer2/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="CanvasLayer2/OptionButton" to="." method="_on_OptionButton_item_selected"]
